# tabular-ml-lab

./: .gitignore  MODEL_CARD.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: api.py  dashboard.py
configs/: default.yaml
docs/: results.md
scripts/: dashboard.py  download_data.py  eda.py  evaluate.py  serve.py  train.py
src/tabular_ml_lab/: __init__.py  cli.py  config.py  data.py  eda.py  eval.py  infer.py  metrics.py  model.py  preprocess.py  train.py  utils.py
src/tabular_ml_lab/lab/: __init__.py  datasets.py  experiments.py  metrics.py  modeling.py  schema.py  serving.py  torch_trainer.py  utils.py
tests/: test_metrics.py  test_preprocess.py
